<resources>
    <string name="app_name">PassKeeper</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="button">Iniciar Sesión</string>
    <string name="atras">Volver</string>
    <string name="register">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir Contraseña</string>

    <!--Guardar Contraseña-->
    <string name="guardar_password">Nueva Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="fingerprint">Usa tu Huella</string>
    <string name="url">URL</string>
    <string name="descripcion">Descripción</string>
    <string name="boton_guardar">Guardar</string>
    <string name="login">¿Ya tiene una cuenta?</string>
    <string name="link_login">Toque aquí para registrarse si ya tiene una cuenta</string>


    <!-- Usados exclusivamente en el registro -->
    <string name="btn_register">Registrarse</string>

    <!--Tus Contraseñas-->
    <string name="passwords">Tus Contraseñas</string>
    <string name="txtPasswords">No hay contraseñas que mostrar, ¡por favor añada una!</string>
    <string name="btn_agregar">+</string>

    <!--Editar Contraseña-->
    <string name="edit_password">Editar Contraseña</string>
    <string name="password_e">Contraseña</string>
    <string name="url_e">URL</string>
    <string name="description_e">Descripción</string>

    <!--Ver Contraseña-->
    <string name="ver_password">Ver Contraseña</string>
    <string name="nombre_sitio">Sitio Web</string>
    <string name="usuario_nombre">Usuario</string>
    <string name="password_sitio">Contraseña</string>
    <string name="url_sitio">URL</string>
    <string name="descripcion_pass">Descripción</string>
    <!--<string name="last_date"> 28/09/2023</string>-->

    <!--Menu Popup-->
    <string name="op1">Nosotros</string>
    <string name="op2">Cerrar Sesión</string>
<<<<<<< HEAD
    <string name="faq">FAQ</string>
    <string name="terms">Terms Conditions</string>


=======
    <string name="faq">Preguntas frecuentes</string>
    <string name="contacto">Contacto</string>
    <!--contacto-->
    <string name="enviar">Enviar</string>
    <string name="consultaHint">Escriba su consulta</string>
>>>>>>> c3b68f6d927f7a56cb584937e4274c936e8bdaea
    <!--Splash-->
    <string name="autenticación">Autenticación</string>
    <string name="regresar_a_la_pantalla_anterior">Regresar a la pantalla anterior</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="buscar">Buscar</string>
    <string name="signo_de_exclamaci_n_que_indica_que_no_tiene_nunguna_contrasela_generada">Signo de exclamación que indica que no tiene nunguna contrasela generada</string>
    <string name="acceder_a_submen_con_opciones_de_cerrar_sesi_n_e_ir_a_about_us">Acceder a submenú con opciones de cerrar sesión e ir a About us</string>
    <string name="agregar_nueva_contrase_a">Agregar nueva contraseña</string>
    <string name="desplazamiento_vertical_de_contrase_as">Desplazamiento vertical de contraseñas</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>
    <string name="toque_aqui_para_agregar_una_nueva_contrase_a">Toque aqui para agregar una nueva contraseña</string>
    <string name="agregar">Agregar</string>
    <string name="todo">Scroll</string>

    <!--Frequently Asked Questions-->
    <string name="titulo_faq">PREGUNTAS FRECUENTES</string>
    <string name="q1">¿Puedo acceder a mis contraseñas desde diferentes dispositivos?</string>
    <string name="a1">"Actualmente, esta funcionalidad está en desarrollo. Será una característica destacada en la próxima versión premium de PassKeeper. Te permitirá importar y exportar tus contraseñas de manera segura entre dispositivos utilizando nuestra tecnología cloud, garantizando acceso en cualquier momento y desde cualquier lugar."</string>
    <string name="q2">"¿Cuáles son las ventajas de suscribirme a la versión premium de PassKeeper?"</string>
    <string name="a2">"La versión premium de PassKeeper ofrece características adicionales como almacenamiento ilimitado de contraseñas, acceso prioritario al soporte técnico, opciones avanzadas de recuperación de cuenta, y herramientas de seguridad adicionales para proteger tus datos. Puedes suscribirte a la versión premium directamente desde nuestro sitio web."</string>
    <string name="q3">"¿PassKeeper ofrece soporte técnico?"</string>
    <string name="a3">"Sí, PassKeeper cuenta con un equipo de soporte técnico dedicado para ayudarte con cualquier problema o pregunta que puedas tener. Puedes contactar al soporte técnico a través de la sección de 'Contacto' en nuestra aplicación o sitio web, donde podrás enviar una solicitud y recibir asistencia personalizada."</string>
    <string name="q4">"¿Cómo asegura PassKeeper mis contraseñas?"</string>
    <string name="a4">"PassKeeper emplea algoritmos de cifrado avanzados para almacenar tus contraseñas de forma segura. Cada contraseña se encripta individualmente, y solo tú puedes acceder a ellas mediante tu contraseña maestra. Además, nuestras medidas de seguridad incluyen autenticación multifactor para añadir una capa extra de protección."</string>
    <string name="q5">"¿PassKeeper es adecuado para empresas?"</string>
    <string name="a5">"Sí, PassKeeper está diseñado tanto para usuarios individuales como para empresas. Ofrecemos planes de suscripción que se adaptan a las necesidades de empresas de todos los tamaños, proporcionando herramientas avanzadas de gestión de contraseñas y control de acceso para equipos."</string>

</resources>
