<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/option_1"
          android:title="@string/op1"
          android:icon="@drawable/address_card"
          android:actionMenuTextAppearance="@style/MyMenuItemTextAppearance"/>
    <item android:id="@+id/option_faq"
          android:title="@string/faq"
          android:icon="@drawable/ic_faq"
          android:actionMenuTextAppearance="@style/MyMenuItemTextAppearance"/>
<<<<<<< HEAD
    <item android:id="@+id/option_terms"
        android:title="@string/terms"
        android:icon="@drawable/circle_exclamation_solid"
=======
    <item android:id="@+id/option_contact"
        android:title="@string/contacto"
        android:icon="@drawable/ic_faq"
>>>>>>> c3b68f6d927f7a56cb584937e4274c936e8bdaea
        android:actionMenuTextAppearance="@style/MyMenuItemTextAppearance"/>
    <item android:id="@+id/option_2"
          android:title="@string/op2"
          android:icon="@drawable/right_from_bracket"
          android:actionMenuTextAppearance="@style/MyMenuItemTextAppearance"/>
</menu>
