<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteY="25dp">

    <View
        android:id="@+id/viewBlue"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <!-- Título passleeper-->


    <!-- Tarjeta blanca contenedora de los inputs-->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewReg"
        android:layout_width="319dp"
        android:layout_height="550dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <!--   Input iniciar sesión  -->

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="390dp"
            android:layout_marginEnd="20dp"
            android:button="@drawable/fingerprint_solid"
            android:buttonTint="@color/text_accesibility"
            android:checked="true"
            android:fontFamily="@font/poppins"
            android:showText="false"
            android:text="@string/fingerprint"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_accesibility"
            android:textColorLink="@color/greyLigth"
            android:textIsSelectable="false"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textStyle="bold"
            android:thumbTint="@color/my_dark_primary"
            android:visibility="visible"
            tools:visibility="visible" />


        <!-- Inicia configuración de la caja de los inputs-->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewReg2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">


            <!-- Inicia configuración del Título del registro-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <!-- Boton para ir a la pagina principal -->

                <!-- Texto del Título del registro-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_home"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/blue"
                    android:contentDescription="@string/boton_guardar"
                    android:elevation="12dp"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/arrow"
                    app:iconGravity="start"
                    app:iconSize="30dp"


                    app:iconTint="@color/white"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textTitleReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/register"
                    android:textColor="@color/text_accesibility"
                    android:textSize="30sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <!-- Primer campo de entrada -->

            <!-- Segundo campo de entrada -->

            <!-- Tercer campo de entrada -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutReg"
                android:layout_width="285dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:hint="@string/correo"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/greyLigth"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="Correo icon"
                app:startIconDrawable="@drawable/correo"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsernameReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2Reg"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/greyLigth"
                app:counterEnabled="false"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grey"
                app:errorEnabled="true"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="Lock icon"
                app:startIconDrawable="@drawable/lock_solid"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2Reg2"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:hint="@string/password2"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/greyLigth"
                app:counterEnabled="false"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grey"
                app:errorEnabled="true"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="Lock icon"
                app:startIconDrawable="@drawable/lock_solid"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPasswordReg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <!-- Texto link a login(activity principal)-->
        <TextView
            android:id="@+id/linkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="470dp"
            android:contentDescription="@string/link_login"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/materialButtonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        app:cardElevation="15dp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>