<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/contacto"
        android:textColor="#1090cb"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewContact"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutQuery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewContact"
        app:hintTextColor="@color/greyLigth"
        app:boxStrokeColor="@color/greyLigth"
        android:hint="@string/consultaHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="5"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendQuery"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutQuery"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSendQuery"
        android:backgroundTint="@color/grey"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
